feat(telegram-contact-section): improve accessability

--- a/frontend/src/widgets/telegram-contact-section/ui/telegram-contact-section.module.scss
+++ b/frontend/src/widgets/telegram-contact-section/ui/telegram-contact-section.module.scss
@@ -66,6 +66,10 @@
     @mixin md-comp-telegram-link-size-transition {
       transition-property: width, height;
       @include t.spatial("default");
+
+      @media (prefers-reduced-motion: reduce) {
+        transition: none;
+      }
     }
 
     display: flex;
