--- a/frontend/src/widgets/development-process-section/ui/desktop-section-development-process/desktop-section-development-process.module.scss
+++ b/frontend/src/widgets/development-process-section/ui/desktop-section-development-process/desktop-section-development-process.module.scss
@@ -1,3 +1,5 @@
+@use "../../../../shared/styles/tokens/" as t;
+
 .stageList {
   display: flex;
   flex-direction: column;
@@ -11,9 +13,9 @@
 }
 
 .stageTitle {
+  @include t.typescale-emphasized("title-large");
+
   color: var(--md-sys-color-tertiary);
-  font-size: 22px;
-  font-weight: 600;
   margin-bottom: 12px;
 }
 
